Add authenticated registry support
This moves the handling of authentication from a pre-provisioned
~/.docker/config.json to a docker login that ends up creating that
file by itself.

The authentication arguments are provided by new parameters:
- kolla_registry_username (env REGISTRY_USERNAME)
- kolla_registry_password (env REGISTRY_PASSWORD)
- kolla_registry_email (env REGISTRY_EMAIL)
- kolla_registry_cacert (registry cacert if required)

Change-Id: I4d91d98f20d4b99bf02e05f8e4c72a53a2f77d94

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -95,6 +95,21 @@
   notify:
     - Reload and restart docker
 
+- block:
+    - name: Create Docker certs directory for registry certificate authority
+      file:
+        path: "/etc/docker/certs.d/{{ kolla_registry }}"
+        state: "directory"
+        recurse: "yes"
+
+    - name: Install registry certificate authority
+      copy:
+        content: "{{ kolla_registry_cacert }}"
+        dest: "/etc/docker/certs.d/{{ kolla_registry }}/registry.crt"
+  when:
+    - kolla_registry_cecert is defined
+    - kolla_registry_cecert != ""
+
 - name: Flush handlers
   meta: flush_handlers
 
