Add authenticated registry support
This moves the handling of authentication from a pre-provisioned
~/.docker/config.json to a docker login that ends up creating that
file by itself.

The authentication arguments are provided by new parameters:
- kolla_registry_username (env REGISTRY_USERNAME)
- kolla_registry_password (env REGISTRY_PASSWORD)
- kolla_registry_email (env REGISTRY_EMAIL)
- kolla_registry_cacert (registry cacert if required)

Change-Id: I4d91d98f20d4b99bf02e05f8e4c72a53a2f77d94

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,13 +2,6 @@
 tripleo_overrides: "/usr/share/openstack-tripleo-common-containers/container-images/tripleo_kolla_template_overrides.j2"
 tripleo_containers: "/usr/share/openstack-tripleo-common-containers/container-images/overcloud_containers.yaml"
 
-# Location to the "config.json" file (defaults to $HOME/.docker)
-# This file is required when pushing to Docker Hub.
-# Note: Defaulting to ansible_env as opposed to an env lookup -- env lookup
-# will fetch the variable from the local machine, we're interested in the
-# remote machine home directory.
-docker_config: "{{ ansible_env.HOME }}/.docker"
-
 # Set up storage to one of: overlay2, overlay, btrfs
 docker_storage_driver: "overlay2"
 
@@ -49,8 +42,13 @@ kolla_threads: 8
 kolla_timeout: 120
 
 # Use a private registry, optionally insecure
-kolla_registry:
 kolla_insecure_registry: false
+kolla_registry: "trunk.registry.rdoproject.org"
+kolla_registry_username: "{{ lookup('env', 'REGISTRY_USERNAME') | default('unused', true) }}"
+kolla_registry_password: "{{ lookup('env', 'REGISTRY_PASSWORD') | default(None, true) }}"
+kolla_registry_email: "{{ lookup('env', 'REGISTRY_EMAIL') | default(None, true) }}"
+# Contents of the registry certificate authority, if there is one
+kolla_registry_cacert:
 
 # This doesn't actually configure the kolla-build to push, we're pushing
 # ourselves in order to be able to, if need be, build and push separately.
