Switch Docker storage driver from overlay to overlay2
We're seeing errors when building images with overlay: 'too many links'.
Upstream is also looking to switch to overlay2 [1].

Let's try it.

[1]: https://review.openstack.org/#/c/451916/

Change-Id: Id35808ce70c1c6847c2a18fe25987771a03631ec

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,8 +9,8 @@ tripleo_containers: "/usr/share/openstack-tripleo-common-containers/container-im
 # remote machine home directory.
 docker_config: "{{ ansible_env.HOME }}/.docker"
 
-# Set up storage, overlay or btrfs
-docker_storage_driver: overlay
+# Set up storage to one of: overlay2, overlay, btrfs
+docker_storage_driver: "overlay2"
 
 # Values for docker_storage_driver: btrfs
 docker_btrfs_volume: "/tmp/docker-btrfs"
