Use tripleo-common-containers instead of tripleo-common
We just need the container files and overrides, we don't need the
~300 packages that tripleo-common pulls.

Change-Id: I16eb64d3d6dccceea829525bd958c153f8bea6d8

--- a/tasks/kolla.yml
+++ b/tasks/kolla.yml
@@ -64,11 +64,11 @@
   when: kolla_setup_method == "source"
 
 - block:
-    - name: Install kolla and tripleo-common from packages
+    - name: Install kolla and tripleo-common-containers from packages
       vars:
         packages:
           - openstack-kolla
-          - openstack-tripleo-common
+          - openstack-tripleo-common-containers
       package:
         name: "{{ packages }}"
         state: "present"
