Fix condition for setting up CA certificate
Change-Id: Ib369888d4e1ccb82c2079531cd0841f55b058a1f

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -108,7 +108,7 @@
         dest: "/etc/docker/certs.d/{{ kolla_registry }}/registry.crt"
   when:
     - kolla_registry_cacert is defined
-    - kolla_registry_cacert
+    - kolla_registry_cacert is not none
 
 - name: Flush handlers
   meta: flush_handlers
