Bundle push tasks and add loop_control
This will reduce the amount of necessary tasks and will avoid
warnings because we're using nested with_items.

Change-Id: I7d8c1bb3e0bff06bff781cde6bc2b7e3017956fa

--- a/tasks/push.yml
+++ b/tasks/push.yml
@@ -15,13 +15,13 @@
 #
 
 - block:
-    - name: "docker push {{ image }}:{{ kolla_tag }}"
-      command: docker push {{ image }}:{{ kolla_tag }}
-
     # Doing tag and push in the same task for the sake of doing less tasks
-    - name: "docker push {{ image }}:{{ version_hash }}"
+    - name: "Push and tag: {{ image }}"
       command: >
-        {{ item }}
+        {{ cmd }}
       with_items:
+        - "docker push {{ image }}:{{ kolla_tag }}"
         - "docker tag {{ image }}:{{ kolla_tag }} {{ image }}:{{ version_hash }}"
         - "docker push {{ image }}:{{ version_hash }}"
+      loop_control:
+        loop_var: "cmd"
