Default skip_parents to true
skip_parents makes it so kolla-build doesn't try to rebuild existing
containers.
This is especially useful in our case, we're building each children
container one at a time and we don't want to be rebuilding parent
layers.

Change-Id: I3204945aa0635d93631f6cf120c425abfb60bb0e

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,6 +35,7 @@ kolla_logs_dir:
 kolla_maintainer: "TripleO Project (http://tripleo.org)"
 kolla_namespace: "tripleo"
 kolla_retries: 3
+kolla_skip_parents: "true"
 kolla_tag: "latest"
 kolla_template_only: "false"
 kolla_template_override: "{{ tripleo_overrides }}"
