Idempotency: with the intent of pushing, don't build if it's already built
This adds logic so that the role will not try to build an image for a
given hash if it has already been pushed to the registry.

Change-Id: I1c3feb389d30d588aa01e9600e9c20a984806d43

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -54,11 +54,12 @@
   when: docker_storage_driver == "btrfs" and not docker_btrfs.stat.exists
 
 # python-docker-py is required so we can leverage Ansible docker modules
-- name: Install docker and docker-py
+- name: Install docker, docker-py and skopeo
   vars:
     packages:
       - docker
       - python-docker-py
+      - skopeo
   package:
     name: "{{ packages }}"
     state: "present"
