Idempotency: with the intent of pushing, don't build if it's already built
This adds logic so that the role will not try to build an image for a
given hash if it has already been pushed to the registry.

Change-Id: I1c3feb389d30d588aa01e9600e9c20a984806d43

--- a/tasks/build.yml
+++ b/tasks/build.yml
@@ -14,7 +14,22 @@
 #   under the License.
 #
 
+# With the intent of pushing new images, we don't want to build an image
+# if it already exists
+# Skopeo is used here because it easily allows to inspect an image without
+# needing to pull it first, it also works on both Docker Hub and OpenShift
+# registry.
+- name: "Verify if {{ image }}:{{ version_hash }} exists"
+  command: skopeo inspect docker://{{ kolla_registry }}/{{ kolla_namespace }}/{{ image }}:{{ version_hash }}
+  changed_when: false
+  failed_when: false
+  register: image_exists
+# when: kolla_push
+
 - name: "Build image: {{ image }}"
   command: >
     {{ kolla_build_path }} {{ image }} \
       --config-file={{ kolla_tmpdir }}/kolla-build.conf
+  when:
+    - image_exists is defined
+    - image_exists.rc != 0
