--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -126,15 +126,25 @@
     - build
 
 - block:
+    - name: Retrieve list of built images (ansible < 2.3)
+      shell: >
+        docker images --filter "label=build_id={{ build_id }}" \
+            | awk '{!/REPOSITORY/ print $1}'
+      register: built_images
+      tags:
+        - push
+      when: "{{ ansible_version.full | version_compare('2.3', '<')   }}"
+
     # This is a bit weird due to the docker images format syntax clashing with jinja
     # https://docs.docker.com/engine/reference/commandline/images/#/formatting
-    - name: Retrieve list of built images
+    - name: Retrieve list of built images (ansible >= 2.3)
       shell: >
         docker images --format "{{ '{{' }}.Repository{{ '}}' }}" \
           --filter "label=build_id={{ build_id }}"
       register: built_images
       tags:
         - push
+      when: "{{ ansible_version.full | version_compare('2.3', '>=')   }}"
 
     - name: Tag images with version and push
       vars:
