--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 tripleo_overrides: "/usr/share/openstack-tripleo-common-containers/container-images/tripleo_kolla_template_overrides.j2"
-tripleo_containers: "/usr/share/openstack-tripleo-common-containers/container-images/overcloud_containers.yaml"
+# Path to save and load overcloud-containers.yaml
+tripleo_containers: "/tmp/tripleo-containers.yaml"
+
 
 # Set up storage to one of: overlay2, overlay, btrfs
 docker_storage_driver: "overlay2"
