--- a/tasks/kolla.yml
+++ b/tasks/kolla.yml
@@ -71,11 +71,12 @@
   when: kolla_setup_method == "source"
 
 - block:
-    - name: Install kolla and tripleo-common-containers from packages
+    - name: Install kolla, tripleo-common-containers, python-tripleoclient from packages
       vars:
         packages:
           - openstack-kolla
           - openstack-tripleo-common-containers
+          - python-tripleoclient
       package:
         name: "{{ packages }}"
         state: "present"
@@ -95,34 +96,16 @@
     msg: "Kolla setup method must be 'source' or 'binary'"
   when: kolla_setup_method != "source" and kolla_setup_method != "binary"
 
-# This block parses the container-images/overcloud_containers.yaml file
-# provided by tripleo-common. It is the default if kolla_rdo_images is not set.
-# It boils down to
-# - Removing the prefix: the namespace and the "centos-binary-"
-# - Removing the suffix, for example ":latest"
-- name: Load supported containers
-  slurp:
-    src: "{{ tripleo_containers }}"
-  register: supported_containers
+- name: Generate container image yaml
+  command: openstack overcloud container image prepare --images-file {{ kolla_tmpdir }}/tripleo-containers.yaml
 
-- name: Parse supported containers
-  vars:
-   containers: "{{ supported_containers.content | b64decode | from_yaml }}"
-  template:
-    src: parsed_containers.j2
-    dest: "{{ kolla_tmpdir }}/parsed_containers.txt"
+- name: Generate image build list
+  command: openstack overcloud container image build --list-images --config-file {{ kolla_tmpdir }}/tripleo-containers.yaml --kolla-config-file /etc/kolla/kolla-build.conf
+  register: containers
 
-- name: Load parsed containers
-  slurp:
-    src: "{{ kolla_tmpdir }}/parsed_containers.txt"
-  register: parsed_containers
-
-# [:-1] to strip the trailing newline (haven't found a better way, sorry)
 - name: Save parsed containers
-  vars:
-    containers: "{{ parsed_containers.content | b64decode }}"
   set_fact:
-    tripleo_default_images: "{{ containers[:-1].split('\n') }}"
+    tripleo_default_images: "{{ containers.stdout | from_yaml }}"
 
 - name: Generate image build_id
   set_fact:
