--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -53,12 +53,12 @@
         state: "mounted"
   when: docker_storage_driver == "btrfs" and not docker_btrfs.stat.exists
 
-# python-docker-py is required so we can leverage Ansible docker modules
-- name: Install docker, docker-py and skopeo
+# python-docker is required so we can leverage Ansible docker modules
+- name: Install docker, python-docker and skopeo
   vars:
     packages:
       - docker
-      - python-docker-py
+      - python-docker
       - skopeo
   package:
     name: "{{ packages }}"
