Force installation of python2-docker
Using python-docker it's installing python-docker-py
as it provides "python-docker" and python2-docker is not
providing/obsoleting python-docker-py. Until python-docker
is fixed, we implement this workaround.

Change-Id: I588dc925e2ea308421511625cc0cf04fb22455a8

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -58,7 +58,7 @@
   vars:
     packages:
       - docker
-      - python-docker
+      - python2-docker
       - skopeo
   package:
     name: "{{ packages }}"
