Really install new python-docker package, not old python-docker-py
Even though python-docker-py does NOT have Provides python-docker, it goes like this: docker-python-1.4.0-115.el7 subpackage of docker SRPM, has Provides: python-docker-py AND Provides: python-docker python-docker-py-1.10.6-1.el7 has both Provides: docker-python = 1.10.6-1.el7 and Obsoletes: docker-python <= 1.4.0-115.x86_64 so yum install python-docker ends up with python-docker-py: Package docker-python is obsoleted by python-docker-py, trying to install python-docker-py-1.10.6-1.el7.noarch instead Resolving Dependencies --> Running transaction check ---> Package python-docker-py.noarch 0:1.10.6-1.el7 will be installed ...

Change-Id: I61cfc895829cdbe2af156c2d03bb37ef0c865135

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -54,11 +54,11 @@
   when: docker_storage_driver == "btrfs" and not docker_btrfs.stat.exists
 
 # python-docker is required so we can leverage Ansible docker modules
-- name: Install docker, python-docker and skopeo
+- name: Install docker, python2-docker and skopeo
   vars:
     packages:
       - docker
-      - python-docker
+      - python2-docker
       - skopeo
   package:
     name: "{{ packages }}"
