Add "centos-binary-" prefix when inspecting images with skopeo
When querying the registry for images, we are using the
image name defined in the ansible role variables but
images created in the registry have a "centos-binary-"
prefix added by kolla.

Change-Id: I332109a860929fff6b6116d0659017f9fd985525

--- a/tasks/build.yml
+++ b/tasks/build.yml
@@ -20,7 +20,7 @@
 # needing to pull it first, it also works on both Docker Hub and OpenShift
 # registry.
 - name: "Verify if {{ image }}:{{ version_hash }} exists"
-  command: skopeo inspect docker://{{ kolla_registry }}/{{ kolla_namespace }}/{{ image }}:{{ version_hash }}
+  command: skopeo inspect docker://{{ kolla_registry }}/{{ kolla_namespace }}/centos-binary-{{ image }}:{{ version_hash }}
   changed_when: false
   failed_when: false
   register: image_exists
