Add logic to build the images even if they already exist on the registry
Change-Id: I53d9880a2805eaf9e555f0d679676e5f345e8d23

--- a/tasks/build.yml
+++ b/tasks/build.yml
@@ -24,7 +24,7 @@
   changed_when: false
   failed_when: false
   register: image_exists
-  when: kolla_push
+  when: not kolla_force_build
 
 - name: "Build image: {{ image }}"
   command: >
