Default kolla_logs_dir to kolla_tmpdir/logs
This will allow us to easily recover logs and the tmpdir by default.

Change-Id: I35ec2bcdb2618de1f33698616df8ad8b79e51854

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,7 +31,7 @@ kolla_base_image:
 kolla_base_tag: "latest"
 kolla_debug: "false"
 kolla_install_type: "binary"
-kolla_logs_dir:
+kolla_logs_dir: "{{ kolla_tmpdir }}/logs"
 kolla_maintainer: "TripleO Project (http://tripleo.org)"
 kolla_namespace: "tripleo"
 kolla_retries: 3
