Use kolla_tmpdir to put the temporary parsed_containers file
There's no need to create a temporary file outside of that directory.

Change-Id: I8d81d19da767cdf7ecbdfd63374e99894cc43a26

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,25 +42,16 @@
         src: "{{ tripleo_containers }}"
       register: supported_containers
 
-    - name: Create temporary file for parsed containers
-      command: mktemp --suffix=_kolla-build
-      register: tmpfile
-
-    - name: Adjust permissions on parsed containers file
-      file:
-        path: "{{ tmpfile.stdout }}"
-        mode: "0755"
-
     - name: Parse supported containers
       vars:
        containers: "{{ supported_containers.content | b64decode | from_yaml }}"
       template:
         src: parsed_containers.j2
-        dest: "{{ tmpfile.stdout }}"
+        dest: "{{ kolla_tmpdir/parsed_containers.txt }}"
 
     - name: Load parsed containers
       slurp:
-        src: "{{ tmpfile.stdout }}"
+        src: "{{ kolla_tmpdir/parsed_containers.txt }}"
       register: parsed_containers
 
     - debug:
