Move from granular builds to concurrent native kolla-build
It turns out that we aren't able to get good performance when
trying to build each image individually -- and even with asynchronous
concurrent builds, threads would be likely to step on each others' toes.

Let's give up on that and leave the concurrency and threading up to
kolla-build itself. Logs for each individual container build is available
in the tmpdir.

This also means we're ditching the mechanism where we can inspect a remote
registry before trying to build. This is not so much an issue if we're
no longer suffering from performance problems.

Change-Id: I667fc680b7da9431318314acafe0be3464aa05d2

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -55,11 +55,9 @@ kolla_registry_cacert:
 # ourselves in order to be able to, if need be, build and push separately.
 kolla_build: true
 kolla_push: false
-# Build the containers even if they already exist on the remote registry
-kolla_force_build: false
 
-# kolla_rdo_images is used to override the default provided by tripleo-common
-# inside container-images/overcloud_containers.yaml. It is a list of patterns
-# to build containers for. For example, 'nova' would build all parent and child
-# containers related to 'nova'.
+# kolla_rdo_images is what ends up being configured for the kolla-build profile
+# "tripleo_custom". It is a list of patterns to build containers for.
+# For example, 'nova' would build all parent and child containers related to
+# 'nova'.
 kolla_rdo_images:
