--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -54,12 +54,11 @@
   when: docker_storage_driver == "btrfs" and not docker_btrfs.stat.exists
 
 # python-docker is required so we can leverage Ansible docker modules
-- name: Install docker, python-docker and skopeo
+- name: Install docker, python-docker
   vars:
     packages:
       - docker
       - python-docker
-      - skopeo
   package:
     name: "{{ packages }}"
     state: "present"
