--- a/tasks/kolla.yml
+++ b/tasks/kolla.yml
@@ -138,3 +138,13 @@
   template:
     src: "template-overrides.j2"
     dest: "{{ kolla_tmpdir }}/template-overrides.j2"
+
+- name: Set Kolla build profile
+  set_fact:
+    build_profile: >
+      {% if kolla_rdo_images is defined and kolla_rdo_images -%}
+      {% set profile = "tripleo_custom" -%}
+      {% else -%}
+      {% set profile = "tripleo_default" -%}
+      {% endif -%}
+      {{- profile -}}
