Do the initial push with kolla-build
To further improve build and push performance, leave the initial
container push to kolla-build.

Change-Id: I8e70583471aee5747833ff601f3266c32267e3ba

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,27 +66,38 @@
     - kolla_registry_password is defined and kolla_registry_password
     - kolla_push
 
-# The with_items inline jinja provides the ability to use either a list format
-# or a comma-separated list of values interchangeably.
-- name: Build default images
+- name: Set build profile
+  set_fact:
+    build_profile: >
+      {% if kolla_rdo_images is defined and kolla_rdo_images -%}
+      {% set profile = "tripleo_custom" -%}
+      {% else -%}
+      {% set profile = "tripleo_default" -%}
+      {% endif -%}
+      {{- profile -}}
+
+- name: Build images
   command: >
-    {{ kolla_build_path }} --profile tripleo_default \
+    {{ kolla_build_path }} --profile {{ build_profile }} \
       --config-file={{ kolla_tmpdir }}/kolla-build.conf
   when:
-   - kolla_build | bool
-   - kolla_rdo_images is not defined or not kolla_rdo_images
+    - kolla_build
+    - not kolla_push
   tags:
     - build
 
-- name: Build custom images
+# When pushing, we're using kolla-build to do the initial image push to benefit
+# from maximum concurrency. Tagging is done afterwards.
+- name: Build and push images
   command: >
-    {{ kolla_build_path }} --profile tripleo_custom \
-      --config-file={{ kolla_tmpdir }}/kolla-build.conf
+    {{ kolla_build_path }} --profile {{ build_profile }} \
+      --config-file={{ kolla_tmpdir }}/kolla-build.conf --push
   when:
-   - kolla_build | bool
-   - kolla_rdo_images is defined and kolla_rdo_images
+    - kolla_build
+    - kolla_push
   tags:
     - build
+    - push
 
 - block:
     # This is a bit weird due to the docker images format syntax clashing with jinja
@@ -99,10 +110,10 @@
       tags:
         - push
 
-    - name: Tag images with version and push
+    - name: Tag images
       vars:
         image: "{{ item }}"
-      include: push.yml
+      include: tag.yml
       static: no
       with_items: "{{ built_images.stdout_lines }}"
       tags:
