Allow to customize the amount of concurrent downloads and uploads
Change-Id: Ic3fa614d536073175a18247b03325f368c302e0d

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -64,8 +64,8 @@
     state: "present"
 
 # Workaround Docker MTU issue https://bugs.launchpad.net/kolla-ansible/+bug/1654395
-- name: Override Docker defaults to include MTU parameter
-  copy:
+- name: Override Docker defaults to include MTU parameter and network options
+  template:
     src: "docker-network"
     dest: "/etc/sysconfig/docker-network"
   notify:
