--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -57,7 +57,7 @@
 - name: Install docker, python-docker
   vars:
     packages:
-      - docker
+      - docker-latest
       - python-docker
   package:
     name: "{{ packages }}"
