Change default namespace for images to 'master'
We've been using 'tripleo' but as we need to create a new
one for pike release, we are renaming the namespace for master
also.

Change-Id: I3ce3da4381a4971914b824564ca192704cdda219

--- a/tag-promotion.yml
+++ b/tag-promotion.yml
@@ -40,4 +40,4 @@
           command: oc tag -n {{ project }} {{ item }}:{{ source_tag }} {{ item }}:{{ destination_tag }}
           with_items: "{{ images.stdout_lines }}"
       vars:
-        project: "{{ kolla_namespace | default('tripleo') }}"
+        project: "{{ kolla_namespace | default('master') }}"
